--- a/WebContent/template/user/user.html
+++ b/WebContent/template/user/user.html
@@ -56,22 +56,22 @@
 		    	<h2 style="color: #333">一元购</h2>
 		    	<i class="icon ion-chevron-right icon-accessory"></i>
 		  </a>
-		  <a href="#/tab/user_order?id={{userInfo.id}}" class="item item-icon-left item-icon-right">
+		  <a href="#/tab/user_order" class="item item-icon-left item-icon-right">
 		  		<i class="icon ion-ios-copy-outline font-28" style="color: #FFBBFF;"></i>
 		    	<h2 style="color: #333">我的订单</h2>
 		    	<i class="icon ion-chevron-right icon-accessory"></i>
 		  </a>
-		  <a href="#/tab/user_coupon?id={{userInfo.id}}" class="item item-icon-left item-icon-right">
+		  <a href="#/tab/user_coupon" class="item item-icon-left item-icon-right">
 		  		<i class="icon ion-card font-28" style="color: #FFBBFF"></i><!-- ion-ios-copy-outline -->
 		    	<h2 style="color: #333">我的券包</h2>
 		    	<i class="icon ion-chevron-right icon-accessory"></i>
 		  </a>
-		  <a href="#tab/user_keep?id={{userInfo.id}}" class="item item-icon-left item-icon-right">
+		  <a href="#tab/user_keep" class="item item-icon-left item-icon-right">
 		  		<i class="icon ion-star font-28" style="color: #FFBBFF"></i>
 		    	<h2 style="color: #333">我的收藏</h2>
 		    	<i class="icon ion-chevron-right icon-accessory" ></i><!-- ion-android-star ion-android-favorite-outline ion-android-favorite --></i>
 		  </a>
-		  <a href="#tab/user_address?id={{userInfo.id}}" class="item item-icon-left item-icon-right">
+		  <a href="#tab/user_address" class="item item-icon-left item-icon-right">
 		  		<i class="icon ion-ios-location-outline font-28" style="color: #FFBBFF"></i>
 		    	<h2 style="color: #333">地址管理</h2>
 		    	<i class="icon ion-chevron-right icon-accessory"></i>
@@ -91,7 +91,7 @@
 		    	<h2 style="color: #333">关于我们</h2>
 		    	<i class="icon ion-chevron-right icon-accessory"></i>
 		  </a>
-		  <a href="#tab/user_feedBack?id={{userInfo.id}}" class="item item-icon-left item-icon-right">
+		  <a href="#tab/user_feedBack" class="item item-icon-left item-icon-right">
 		  		<i class="icon ion-compose font-28" style="color: #FFBBFF"><!-- ion-ios-gear-outline --></i>
 		    	<h2 style="color: #333">意见和反馈</h2>
 		    	<i class="icon ion-chevron-right icon-accessory"></i>
