--- a/WebContent/template/user/newAddress.html
+++ b/WebContent/template/user/newAddress.html
@@ -17,17 +17,17 @@
 	        <button ng-click="$ionicGoBack()" class="button button-icon ion-ios-arrow-left">
 	    	</button>
         </div>
-	   <h1 class="title">新地址</h1>
+	   <h1 class="title">{{address.id?'修改地址':'新地址'}}</h1>
    </ion-header-bar>
    <ion-content >
        <label class="item item-input">
 	       <span class="input-label" style="width:80px;">用户名称</span>
-	       <input type="hidden" ng-model="newAddress.id">
-	       <input ng-model="newAddress.userName" placeholder="请输入用户名" type="text">
+	       <input type="hidden" ng-model="address.id">
+	       <input ng-model="address.userName" placeholder="请输入用户名" type="text">
        </label>
        <label class="item item-input">
 	       <span class="input-label" style="width:80px;">电话号码</span>
-	       <input ng-model="newAddress.phone" placeholder="请输入电话号码"  type="tel">
+	       <input ng-model="address.phone" placeholder="请输入电话号码"  type="tel">
        </label>
        <label class="item item-input">
 	       <span class="input-label" style="width:80px;">地址</span>
@@ -35,7 +35,7 @@
        </label>
        <label class="item item-input">
 	       <span style="position:absolute;top:10;width:80px;">详细地址</span>
-	       <textarea ng-model="newAddress.detail" style="height:60px;padding-left:80px;resize:none;" placeholder="请输入详细地址"></textarea>
+	       <textarea ng-model="address.road" style="height:60px;padding-left:80px;resize:none;" placeholder="请输入详细地址"></textarea>
        </label>
        <button class="button button-full button-calm" ng-click="saveUpdate(newAddress)">确定</button>
    </ion-content>
