--- a/WebContent/template/goods/goodsItem.html
+++ b/WebContent/template/goods/goodsItem.html
@@ -121,10 +121,10 @@
           						   </div>
           </div>
         </div>
-        <div class="item row font-12" style="margin-top:8px;padding-bottom:8px;">
-        	<div class="col-25" ><i class="ion-ios-checkmark-outline font-18" style="color:red;position:relative;top:2px;"></i> 正品保证</div>
-        	<div class="col-25" ><i class="ion-ios-checkmark-outline font-18" style="color:red;position:relative;top:2px;"></i> 七天包退</div>
-        	<div class="col-25" ><i class="ion-ios-checkmark-outline font-18" style="color:red;position:relative;top:2px;"></i> 隐私包装</div>
+        <div class="item row font-12" style="margin:8px 0px 0px 0px;padding-bottom:8px;border:0">
+        	<div class="col" ><i class="ion-ios-checkmark-outline font-18" style="color:red;position:relative;top:2px;"></i> 正品保证</div>
+        	<div class="col" ><i class="ion-ios-checkmark-outline font-18" style="color:red;position:relative;top:2px;"></i> 七天包退</div>
+        	<div class="col" ><i class="ion-ios-checkmark-outline font-18" style="color:red;position:relative;top:2px;"></i> 隐私包装</div>
         </div>
 	    <ion-item id="slideScroll" class="font-14 fixedBar hide-goodItem-header-mark" style="margin-top:8px;text-align:center; padding:0px; visibility:visible;">
 			 <nav>
