--- a/WebContent/template/user/address.html
+++ b/WebContent/template/user/address.html
@@ -31,6 +31,7 @@
 			  		</div>
 			  	</div>
 		    </div>
+		    <div ng-if="!moreData" class="font-12 loadMoreOver" style="padding:4px;text-align: center;color:#999">数据已加载完毕~</div>
 		    <ion-infinite-scroll ng-if="moreData" on-infinite="loadMore()" distance="0%" ></ion-infinite-scroll>
 	</ion-content>
 </ion-view>
