--- a/WebContent/template/user/logistics.html
+++ b/WebContent/template/user/logistics.html
@@ -28,17 +28,18 @@
 	</ion-header-bar>
 	<ion-content id="logisticsContent" has-header="true" class="dq_bg_color" padding="false" style="color:#666;">
 		  <div class="font-14 item" style="padding: 10px;color:#999;margin-bottom:1px;">
-			 <div style="margin-bottom:2px;">快递公司: {{express.companyName}}</div>
-			 <div>快递编号: {{express.expressNo}}</div>
+			 <div style="margin-bottom:2px;">快递公司: {{post.postName}}</div>
+			 <div>快递编号: {{post.postCode}}</div>
 		  </div>
 		  <div class="font-12 item item-icon-left express" ng-repeat="item in results track by $index" style="padding:0px;color:#aaa;border:0px">
-		  	 <i class="icon font-16 {{$index==results.length-1?'ion-ios-circle-filled lastCircle':''}}" 
-		  	 	ng-class="{true:'ion-checkmark-circled firstCircle',false:'ion-ios-circle-filled'}[item.status=='Y']"
+		  	 <i class="icon font-16 {{$index==results.length-1?'ion-ios-circle-filled lastCircle':($index==0?'firstCircle':'')}}" 
+		  	 	ng-class="{true:'ion-checkmark-circled firstCircle',false:'ion-ios-circle-filled'}[item.isSignIn=='Y']"
 		  		style="left:5px;z-index:999;color:#aaa;{{($index==0||$index==(results.length-1))?'color:red':''}}"></i>
 		  	 <div style="margin-left:20px;border-top:0;border-bottom:0;border-right:0;padding:10px 10px 10px 20px;color:#aaa;" class="item font-12">
-				 <div style="white-space:pre-line;" ng-class="{true:'statusYes'}[item.status=='Y']">{{item.content}}</div>
-				 <div ng-class="{true:'statusYes'}[item.status=='Y']">{{item.time}}</div>
+				 <div style="white-space:pre-line;" ng-class="{true:'statusYes'}[item.isSignIn=='Y']">{{item.context}}</div>
+				 <div ng-class="{true:'statusYes'}[item.isSignIn=='Y']">{{item.timeNode|date:'yyyy-MM-dd HH:mm:ss'}}</div>
 			 </div>
 		  </div>
+		  <div ng-if="results.length==0" style="padding:10px;text-align:center;">暂时没有快递信息~</div>
 	</ion-content>
 </ion-view>
