--- a/WebContent/template/user/orderInfo.html
+++ b/WebContent/template/user/orderInfo.html
@@ -18,34 +18,39 @@
 		<div>
 			<div class="item item-icon-left item-icon-right" style="padding:10px 40px 10px 40px;">
 			  		<i class="icon ion-ios-location-outline font-28" style="color: #FFBBFF;left:4px;"></i>
-			    	<h2 class="font-14" style="color: #333;margin-bottom:8px;">收货人：{{address.name}}&nbsp;&nbsp;{{address.phone}}</h2>
-			    	<p class="font-12" style="white-space:pre-line;">收货地址：{{address.address}}&nbsp;&nbsp;{{address.detail}}</p>
+			    	<h2 class="font-14" style="color: #333;margin-bottom:8px;">收货人：{{result.tuserAddress.userName}}&nbsp;&nbsp;{{result.tuserAddress.phone}}</h2>
+			    	<p class="font-12" style="white-space:pre-line;">收货地址：{{result.tuserAddress.provinceName}}{{result.tuserAddress.cityName}}{{result.tuserAddress.regionName}}&nbsp;&nbsp;{{result.tuserAddress.road}}</p>
 			</div>
 		</div>
 		<div style="margin-top:8px;">
 			<div class="item item-divider" style="padding-left:8px;">
-	        	<h3 style="white-space: normal;color:#333;font-weight:700; ">订单信息</h3>
+	        	<h3 style="white-space: normal;color:#333;font-weight:700; ">订单信息<span class="font-12" style="position:absolute;right:8px;color:#999;font-weight:normal;color:red;">{{result.orderStatus}}</span></h3>
 	        </div>
 			<div class="item" style="padding:10px 8px 10px 8px;">
-				<h2 class="font-14" style="color:#999;padding-bottom:2px;">订单编号：<span class="">{{result.orderId}}</span></h2>
+				<h2 class="font-14" style="color:#999;padding-bottom:2px;">订单编号：<span class="">{{result.orderCode}}</span></h2>
 				<h2 class="font-14" style="color:#999;padding-bottom:2px;">下单日期：<span class="">{{result.createTime}}</span></h2>
-				<h2 class="font-14" style="color:#999;">付款方式：<span class="">{{result.payMent}}</span></h2>
+				<h2 class="font-14" style="color:#999;">付款方式：<span class="">{{result.payMethed}}</span></h2>
 		    </div>
 		    <div class="item item-divider font-14" style="background-color:#FFF;color:#999;padding-left:8px;">
-		    	留&nbsp;&nbsp;&nbsp;&nbsp;   言：无
+		    	留&nbsp;&nbsp;&nbsp;&nbsp;   言：{{result.remark?result.remark:"无"}}
 		    </div>
 	    </div>
 		<div style="margin-top:8px;">
 			<div class="item item-divider" style="padding-left:8px;">
-	        	<h3 style="white-space: normal;color:#333;font-weight:700;">订单商品</h3>
+	        	<h3 style="white-space: normal;color:#333;font-weight:700;">订单商品<span class="font-12" style="position:absolute;right:8px;color:#999;font-weight:normal;">共{{result.totalNum}}件</span></h3>
 	        </div>
-			<a ng-repeat="item in result.items track by $index" href="#/tab/{{action_flag}}_goodsItem?id=10016" class="item item-avatar item-icon-right" style="min-height:76px;padding:8px 8px 8px 76px;">
-		          <img style="top:8px;left:8px;width:60px;height:60px;max-height:60px;max-width:60px; border-radius:0px;" src="http://ionicframework.com/img/docs/mcfly.jpg" alt="">
-		          <h3 class="ng-binding" style="height:16px;line-height:16px;">情趣试衣间</h3>
-		          <p class="font-12 ng-binding" style="color: #999;height:16px;line-height:16px;">规格：3只装</p>
-		          <p class="font-12 ng-binding" style="color: #999;height:16px;line-height:16px;">数量：1</p>
-		          <i class="icon font-10" style="right:0;"><span style="padding: 0px 6px 2px 6px;font-weight:700;position:relative;top:-20px;">¥19.90</span></i>
+			<a ng-repeat="item in result.orderItemList track by $index" href="#/tab/{{action_flag}}_goodsItem?id={{item.goodsId}}" class="item item-avatar item-icon-right" style="min-height:76px;padding:8px 8px 8px 76px;">
+		          <img style="top:8px;left:8px;width:60px;height:60px;max-height:60px;max-width:60px; border-radius:0px;" ng-src="{{item.goodsImg}}" alt="">
+		          <h3 class="ng-binding" style="height:16px;line-height:16px;">{{item.goodsName}}</h3>
+		          <p class="font-12 ng-binding" style="color: #999;height:16px;line-height:16px;">规格：{{item.formatName}}</p>
+		          <p class="font-12 ng-binding" style="color: #999;height:16px;line-height:16px;">数量：{{item.number}}</p>
+		          <i class="icon font-10" style="right:0;"><span style="padding: 0px 6px 2px 6px;font-weight:700;position:relative;top:18px;">¥{{item.price|number:2}}</span></i>
 		    </a>
+	    </div>
+	    <div style="margin-top:8px;">
+			<div class="item item-divider" style="padding-left:8px;">
+	        	<h3 style="white-space: normal;color:#333;font-weight:700;">优惠信息</h3>
+	        </div>
 	    </div>
 	    <div style="margin-top:8px;">
 		    <div class="item item-divider" style="padding-left:8px;">
@@ -53,21 +58,21 @@
 		    </div>
 		    <div>
 			    <div class="item" style="padding:10px 8px 10px 8px;">
-					<h2 class="font-14" style="color:#999;padding-bottom:2px;">商品总价：</h2>
-					<h2 class="font-14" style="color:#999;padding-bottom:2px;">运费：</h2>
-					<h2 class="font-14" style="color:#999;padding-bottom:2px;">运费减免：</h2>
-					<h2 class="font-14" style="color:#999">优惠减免：</h2>
+					<h2 class="font-14" style="color:#999;padding-bottom:2px;">商品总价：<span style="position:absolute;right:8px;">¥{{result.money|number:2}}</span></h2>
+					<h2 class="font-14" style="color:#999;padding-bottom:2px;">运费：<span style="position:absolute;right:8px;">+¥{{result.postMoney|number:2}}</span></h2>
+					<h2 class="font-14" style="color:#999;padding-bottom:2px;">运费减免：<span style="position:absolute;right:8px;">-¥{{result.lostPostMoney|number:2}}</span></h2>
+					<h2 class="font-14" style="color:#999">优惠减免：<span style="position:absolute;right:8px;">-¥{{result.lostMoney|number:2}}</span></h2>
 			    </div>
 		    </div>
 		    <div class="item item-divider" style="background-color:#fff;padding-left:8px;">
-		        <h3 style="white-space: normal;color:#333;font-weight:700; ">订单总额</h3>
+		        <h3 style="white-space: normal;color:#333;font-weight:700; ">订单总额<span style="position:absolute;right:8px;color:red">¥{{result.totalMoney|number:2}}</span></h3>
 		    </div>
 		 </div>
 	</ion-content>
 	<ion-footer-bar align-title="left" class="bar-stable" style="background-color:#E2E2E2">
 		<div class="buttons" style="width:100%;text-align: center;display:block;">
-			<a href="#/tab/{{action_flag}}_logistics?orderId=34534534543543" class="button button-small font-14" style="color:#11c1f3;border: 1px solid #11c1f3;min-height:0;margin-right:10px;min-width:80px">查看物流</a>
-		  	<a href="#tab/{{action_flag}}_disGoodss?id=123123&itemId=2" class="button button-small button-calm font-14" style="min-height:0;margin-left: 10px;min-width:80px">我要评价<span class="badge badge-assertive font-8" style="font-weight:normal;position:absolute;right:-40px;top:-4px;font-size:6px;">送币哟</span></a>
+			<a href="#/tab/{{action_flag}}_logistics?postCode={{result.postCode}}&postName={{result.postName}}" class=" button button-small font-14" style="color:#11c1f3;border: 1px solid #11c1f3;min-height:0;margin-right:10px;min-width:80px">查看物流</a>
+		  	<a href="#tab/{{action_flag}}_disGoodss?id=123123&itemId=2" ng-class="{true:'',false:'disabled'}[result.status==4]" class="button button-small button-calm font-14" style="min-height:0;margin-left: 10px;min-width:80px">我要评价<span class="badge badge-assertive font-8" style="font-weight:normal;position:absolute;right:-40px;top:-4px;font-size:6px;">送币哟</span></a>
 		</div>
 	</ion-footer-bar>
 </ion-view>
